objects/Success_Engagement_Step__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <inlineHelpText>The date by which this task must be completed.</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Open__c</fullName>
        <formula>NOT(
 OR(
  TEXT(Status__c)==&apos;Completed&apos;,
  TEXT(Status__c)==&apos;Cancelled&apos;
 )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>TRUE if the Status is Completed or Cancelled.</inlineHelpText>
        <label>Is Open</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Overdue__c</fullName>
        <formula>AND(
 Due_Date__c &lt; TODAY(),
 Is_Open__c==true
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>TRUE If the Due Date is greater than Today and Step is Open.</inlineHelpText>
        <label>Is Overdue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Success_Engagement__c</fullName>
        <label>Success Engagement</label>
        <referenceTo>Success_Engagement__c</referenceTo>
        <relationshipLabel>Success Engagement Steps</relationshipLabel>
        <relationshipName>Success_Engagement_Steps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Success Engagement Step</label>
    <nameField>
        <label>Success Engagement Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Success Engagement Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>